brat/test/golden/binding/cons.brat.golden
Error in test/golden/binding/cons.brat on line 7:
badUncons(cons(stuff)) = stuff
          ^^^^^^^^^^^

  Unification error: Pattern doesn't match expected length for constructor args

